# vendorfinal

./: .gitignore  API_INTEGRATION_GUIDE.md  COMPETITIVE.md  DEPLOY.md  DEPLOY_QUICKSTART.md  Dockerfile  HACKATHON_QUICKSTART.md  PITCH.md  README.md  WHAT_WE_UPGRADED.md  docker-compose.yml  fly.toml  railway.json  render.yaml
backend/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py  schemas.py
backend/app/data/: baseline_traffic.json  benchmark_dpas.json  demo_vendors.json  dpdp_act_excerpts.json  dpdp_clauses.json  framework_crosswalk.json  real_breach_backtests.json
backend/app/modules/: agent.py  ai_risk.py  alerts.py  anomaly.py  backtest.py  cache.py  canary.py  compliance_diff.py  contract.py  dpdp.py  events.py  framework.py  gateway.py  incident.py  logging_config.py  metrics.py  nuclei.py  osint.py  playbook.py  portfolio.py  rag.py  report.py  signed_url.py  store.py  trust_score.py  webhook.py
backend/tests/: test_smoke.py
docs/: BACKUP_PLAN.md  DECK_FIX.md  DEMO_RUNBOOK.md  DEMO_SCRIPT.md  DEPLOYMENT.md  HACKATHON_DAY_PLAN.md  JUDGES_QA.md  MASTER_GUIDE.md  OPEN_SOURCE_ARSENAL.md  PITCH_SCRIPTS.md  PRESENTATION.docx  YOUR_TASKS.md
frontend/: config.js  index.html  vercel.json
scripts/: demo_attack.py  generate_presentation_docx.py  generate_voiceover.py  preload_demo.py  record_demo.py
